--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,7 @@
   <form [formGroup]="phoneNumberForm" (submit)="onSubmit()" >
     <div class="form-heading">Phone number verification: </div>
 
-    <input type="text" id="mobile" class="form-input" ngModel placeholder="Enter the 10 digit phone number"
-      formControlName="phoneNumber">
+    <input type="text" id="mobile" class="form-input" ngModel placeholder="Enter the 10 digit phone number" formControlName="phoneNumber">
     <div *ngIf="phoneNumber?.errors?.required && phoneNumber?.value" class="form-error">
       Phone number is required
     </div>
@@ -11,4 +10,12 @@
     <br>
     <button type="submit">Submit</button>
   </form>
+  <div class="b-container">
+    Sample Text
+</div>
+<div class="b-popup">
+    <div class="b-popup-content">
+        Text in Popup
+    </div>
+</div>
 </div> 
