--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,12 +10,12 @@
     <br>
     <button type="submit">Submit</button>
   </form>
-  <div class="b-container">
+  <!-- <div class="b-container">
     Sample Text
-</div>
-<div class="b-popup">
+</div> -->
+<!-- <div class="b-popup">
     <div class="b-popup-content">
         Text in Popup
     </div>
-</div>
+</div> -->
 </div> 
