--- a/src/app/requisition/name_info/name-info/name-info.component.html
+++ b/src/app/requisition/name_info/name-info/name-info.component.html
@@ -3,20 +3,20 @@
 
         <div class="form-heading">Enter your first name: </div>
 
-        <input type="text" id="firstName" class="form-input" ngModel formControlName="nameForm">
+        <input type="text" id="firstName" class="form-input" ngModel formControlName="firstName">
         <div *ngIf="firstName?.errors?.required && firstName?.value" class="form-error">
             First name is required
         </div>
         <div class="form-heading">Enter your last name: </div>
 
-        <input type="text" id="lastName" class="form-input" ngModel formControlName="nameForm">
+        <input type="text" id="lastName" class="form-input" ngModel formControlName="lastName">
         <div *ngIf="lastName?.errors?.required && lastName?.value" class="form-error">
             Last name is required
         </div>
 
         <div class="form-heading">Enter your father's name: </div>
 
-        <input type="text" id="fathersName" class="form-input" ngModel formControlName="nameForm">
+        <input type="text" id="fathersName" class="form-input" ngModel formControlName="fathersName">
         <div *ngIf="fathersName?.errors?.required && fathersName?.value" class="form-error">
             Father's name is required
         </div>
