--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-@import "assets/scss/main";
-form{
-    color: rgb(33, 105, 172);
-}
-
-body {
-    font-family: 'Avenir', Arial, Helvetica, sans-serif;
-    -webkit-font-smoothing : antialiased;
-    color: blueviolet;
-
-}
+html, body {
+    align-items: center;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  }
