--- a/src/app/requisition/name_info/name-info/name-info.component.scss
+++ b/src/app/requisition/name_info/name-info/name-info.component.scss
@@ -1,5 +1,3 @@
-  @import "src/styles.scss";
-
   .form {
     background-color: #15172b;
     border-radius: 20px;
@@ -29,6 +27,7 @@
     height: 50px;
     position: relative;
     width: 100%;
+    margin-top: 30px;
   }
   
   .ic1 {
