fix for social info, income and email forms to be displayed correctly

--- a/src/app/requisition/name_info/name-info/name-info.component.html
+++ b/src/app/requisition/name_info/name-info/name-info.component.html
@@ -13,9 +13,9 @@
             <label for="lastname" class="placeholder">Last name</label>
         </div>
         <div class="input-container ic2">
-            <input id="email" class="input" type="text" placeholder=" " ngModel formControlName="fathersName" />
+            <input id="fathersName" class="input" type="text" placeholder=" " ngModel formControlName="fathersName" />
             <div class="cut"></div>
-            <label for="email" class="placeholder">Father's name</label>>
+            <label for="fathersName" class="placeholder">Father's name</label>>
         </div>
         <button type="submit" class="submit">Submit</button>
     </form>
