--- a/src/app/requisition/income_and_email_info/income-and-email-info/income-and-email-info.component.html
+++ b/src/app/requisition/income_and_email_info/income-and-email-info/income-and-email-info.component.html
@@ -2,14 +2,14 @@
     <form [formGroup]="incomeAndEmailForm" (submit)="onSubmit()">
         <div class="title">Income and email form</div>
         <div class="input-container ic1">
-            <input id="firstname" class="input" type="text" placeholder=" " ngModel formControlName="income" />
+            <input id="income" class="input" type="text" placeholder=" " ngModel formControlName="income" />
             <div class="cut"></div>
-            <label for="firstname" class="placeholder">First name</label>
+            <label for="income" class="placeholder">Yearly income amount</label>
         </div>
         <div class="input-container ic2">
-            <input id="lastname" class="input" type="text" placeholder=" " ngModel formControlName="email" />
+            <input id="email" class="input" type="text" placeholder=" " ngModel formControlName="email" />
             <div class="cut"></div>
-            <label for="lastname" class="placeholder">Last name</label>
+            <label for="email" class="placeholder">Email address</label>
         </div>
         <button type="submit" class="submit">Submit</button>
     </form>
